fixed colors alignment and made navbar interactive

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
-@media(max-width:991px){
+@media(min-width:611px) and (max-width:991px){
+    .navbar-brand h1{
+        font-size:1.2em !important;
+    }
+    #brand{
+        margin-left:2px;
+    }
+}
+@media(max-width:610px){
     .navbar-brand h1{
         font-size:1em !important;
     }
+    #brand{
+        width:300px;
+        margin-left:2px;
+    }
 }
 
+@media (max-width:1122px){
+    #logo-img{
+        display:none !important;
+    }
+}
+*{
+    padding:0px;
+    margin:0px;
+}
 body{
     background-color:maroon;
     font-family:'Oxygen',sans-serif;
@@ -76,4 +97,28 @@ a.nav-link{
 }
 .nav-item a{
     text-align:center;
+}
+
+p#sub-text{
+    font-size: .9em;
+}
+p{
+    margin-block-start:0px;
+    margin-block-end:0px;
+}
+p.weDeliver{
+    float:right;
+    color:green;
+}
+
+.nav-item span.bi{
+    margin-right:8px;
+}
+
+#navbar-body a.nav-link{
+    color:maroon;
+}
+
+.navbar-toggler-icon{
+    background:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28100, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
